--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ElectricalDeviceData",
   "version": "1.0.0",
   "description": "This package contains information about electrical devices",
-  "assets": "data"
+  "assets": "data",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
