--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Energiebiene/ElectricalDeviceData",
+  "name": "ElectricalDeviceData",
   "version": "1.0.0",
   "description": "This package contains information about electrical devices",
   "assets": "data",
