--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,9 @@
 name: Publish package to GitHub Packages
 on:
   push:
-    branches: [ main ]
+    tags:
+      - 'v*.*.*'
+
 jobs:
   build:
     runs-on: ubuntu-latest
